objects/ChimpSync__chimpsync_member_statistics__c.object
<CustomObject>
    <fields>
        <fullName>ChimpSync__Campaign_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign History</label>
        <referenceTo>ChimpSync__campaign_history__c</referenceTo>
        <relationshipName>ChimpSync_Campaing_Member_Statistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>ChimpSync Campaign Member Statistics</relationshipLabel>
        <relationshipName>Chimp_Campaing_Member_Statistics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Chimp_Campaing_Member_Statistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Chimp_Campaing_Member_Statistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Links_clicked__c</fullName>
        <label>Links Clicked</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChimpSync__MCidEmail__c</fullName>
        <externalId>true</externalId>
        <label>MailChimpCampaignIdEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Reason_type__c</fullName>
        <label>Reason Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Time_clicked__c</fullName>
        <label>Time Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Time_opened__c</fullName>
        <label>Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Times_opened__c</fullName>
        <label>Times Opened</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Unsubscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsubscribed</label>
        <type>Checkbox</type>
    </fields>
    <label>ChimpSync Campaign Member Statistics</label>
    <nameField>
        <label>ChimpSync Member Statistics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChimpSync Campaign Member Statistics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>